--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <model-viewer
       src="model.glb"
-      ios-src="model.usdz"
+      ios-src="model.USDZ"
       ar
       ar-modes="webxr scene-viewer quick-look"
       camera-controls
