--- a/index.html
+++ b/index.html
@@ -3,26 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Web AR Viewer</title>
-    <script type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js">
-    </script>
+    <title>Sosa Motion AR Viewer</title>
+
+    <!-- Google model-viewer -->
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
     <style>
-      body { margin: 0; background: #000; }
-      model-viewer { width: 100vw; height: 100vh; }
+      body {
+        margin: 0;
+        background-color: #000;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+
+      model-viewer {
+        width: 100%;
+        height: 100%;
+        max-width: 100vw;
+        max-height: 100vh;
+      }
+
+      .loading {
+        position: absolute;
+        color: white;
+        font-family: Arial, sans-serif;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 0.7;
+      }
     </style>
   </head>
+
   <body>
+    <div class="loading">Loading 3D Model...</div>
+
     <model-viewer
+      id="arViewer"
       src="model.glb"
-      ios-src="model.USDZ"
+      ios-src="https://github.com/csosaSN/web-ar-viewer/raw/main/model.USDZ"
       ar
       ar-modes="webxr scene-viewer quick-look"
       camera-controls
       autoplay
-      exposure="1"
+      exposure="1.2"
       environment-image="neutral"
-      shadow-intensity="1">
+      shadow-intensity="1.2"
+      shadow-softness="1"
+      interaction-prompt="auto">
     </model-viewer>
+
+    <script>
+      const viewer = document.getElementById("arViewer");
+      const loadingText = document.querySelector(".loading");
+
+      viewer.addEventListener("load", () => {
+        loadingText.style.display = "none";
+      });
+    </script>
   </body>
 </html>
