--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <model-viewer
       id="arViewer"
       src="model.glb"
-      ios-src="https://github.com/csosaSN/web-ar-viewer/raw/main/model.USDZ"
+      ios-src="https://github.com/csosaSN/web-ar-viewer/raw/main/model.usdz"
       ar
       ar-modes="webxr scene-viewer quick-look"
       camera-controls
