--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
         transform: translate(-50%, -50%);
         opacity: 0.7;
       }
+
+      .ar-button {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        padding: 12px 24px;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
+        background: #00a86b;
+        color: #fff;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      }
+
+      .ar-button:hover {
+        background: #00c77b;
+      }
     </style>
   </head>
 
@@ -44,7 +64,7 @@
     <model-viewer
       id="arViewer"
       src="model.glb"
-      ios-src="https://github.com/csosaSN/web-ar-viewer/raw/main/model.usdz"
+      ios-src="https://cdn.jsdelivr.net/gh/csosaSN/web-ar-viewer/model.usdz"
       ar
       ar-modes="webxr scene-viewer quick-look"
       camera-controls
@@ -55,6 +75,8 @@
       shadow-softness="1"
       interaction-prompt="auto">
     </model-viewer>
+
+    <button slot="ar-button" class="ar-button">View in AR</button>
 
     <script>
       const viewer = document.getElementById("arViewer");
