--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sosa Motion AR Viewer</title>
 
-    <!-- 👇 Add this line anywhere inside the <head> -->
+    <!-- AR hint for Android -->
     <link rel="ar" href="model.glb">
 
-    <!-- Google model-viewer -->
+    <!-- Load model-viewer library -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
     <style>
       body {
         margin: 0;
-        background-color: #000;
+        background: #000;
         overflow: hidden;
         display: flex;
         justify-content: center;
@@ -31,7 +31,7 @@
 
       .loading {
         position: absolute;
-        color: white;
+        color: #fff;
         font-family: Arial, sans-serif;
         top: 50%;
         left: 50%;
@@ -41,14 +41,14 @@
 
       .ar-button {
         position: absolute;
-        bottom: 20px;
+        bottom: 24px;
         left: 50%;
         transform: translateX(-50%);
         padding: 12px 24px;
-        font-family: Arial, sans-serif;
-        font-size: 16px;
         background: #00a86b;
         color: #fff;
+        font-family: Arial, sans-serif;
+        font-size: 16px;
         border: none;
         border-radius: 8px;
         cursor: pointer;
@@ -62,6 +62,32 @@
   </head>
 
   <body>
-    <!-- rest of your code -->
+    <div class="loading">Loading 3D Model...</div>
+
+    <model-viewer
+      id="arViewer"
+      src="model.glb"
+      ios-src="model.usdz"
+      ar
+      ar-modes="scene-viewer quick-look webxr"
+      camera-controls
+      autoplay
+      exposure="1.1"
+      environment-image="neutral"
+      shadow-intensity="1.2"
+      shadow-softness="1"
+      interaction-prompt="auto">
+      <!-- Visible AR button -->
+      <button slot="ar-button" class="ar-button">View in AR</button>
+    </model-viewer>
+
+    <script>
+      const viewer = document.getElementById("arViewer");
+      const loadingText = document.querySelector(".loading");
+
+      viewer.addEventListener("load", () => {
+        loadingText.style.display = "none";
+      });
+    </script>
   </body>
 </html>
